style: adjust padding-bottom to prevent `main-container` from being hidden by `layout-operation`
* Change position of `layout-operation` from `sticky` to `fixed`
* Add `has-bottom` class to `main-container`

--- a/src/resources/sass/global/_variables.scss
+++ b/src/resources/sass/global/_variables.scss
@@ -67,6 +67,7 @@
   -------------------------*/
   --header-height: 40px;
   --footer-height: 32px;
+  --layout-operation-height: 80px;
 
   /* Padding
   -------------------------*/
