--- a/src/resources/sass/layout/_operation.scss
+++ b/src/resources/sass/layout/_operation.scss
@@ -4,7 +4,9 @@
   background-color: var(--dark);
   border-top: 1px solid var(--gray-medium);
   bottom: 0;
-  position: sticky;
+  height: var(--layout-operation-height);
+  position: fixed;
+  width: 100%;
 }
 
 .operation-container {
